kubernetes/apps/llama.cpp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-cpp
spec:
  selector:
    matchLabels:
      name: llama-cpp
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: llama-cpp
    spec:
      runtimeClassName: nvidia
      nodeSelector:
        nvidia.com/gpu.present: "true"
      containers:
        - name: llama-cpp
          image: ghcr.io/ggml-org/llama.cpp:server-cuda@sha256:ef08b5a98b1170f2b62177be0a4027c88a84043c55afbf190dd18b9e7cdcfebf
          args:
            - -m
            - /models/Qwen3.8-27B-UD-Q3_K_XL.gguf
            - --host
            - 0.0.0.0
            - --port
            - "8080"
            - -c
            - "65536"
            - -np
            - "1"
            - --spec-type
            - draft-mtp
            - --spec-draft-n-max
            - "4"
            - -fa
            - "1"
            - --cache-type-k
            - q4_0
            - --cache-type-v
            - q4_0
            - -ngl
            - "99"
            - --temp
            - "0.7"
            - --top-p
            - "0.8"
            - --top-k
            - "20"
            - --presence_penalty
            - "1.5"
            - --min-p
            - "0.00"
            - --alias
            - "unsloth/qwen3.8"
            - --chat-template-kwargs
            - '{"enable_thinking":false}'

          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: model-storage
              mountPath: /models
          resources:
            limits:
              cpu: "4"
              memory: 16G
              nvidia.com/gpu: "1"
            requests:
              cpu: "2"
              memory: 4G
              nvidia.com/gpu: "1"
      volumes:
        - name: model-storage
          persistentVolumeClaim:
            claimName: llm-model-cache-pvc
