kubernetes/apps/llama.cpp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm
spec:
  selector:
    name: llama-cpp
  ports:
    - name: http
      port: 80
      targetPort: 8080
